applied spotless, update gradle wrapper version